{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 7,
  "lineage": "c04729fb-31ce-6aa8-bd47-5a3044990b72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:287002303782:route-table/rtb-0aab64bade5fdc688",
            "id": "rtb-0aab64bade5fdc688",
            "owner_id": "287002303782",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Application": "ecommerce-app",
              "CostCenter": "CC-1001",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "projectx-dev-private-rt",
              "Owner": "devops-team"
            },
            "tags_all": {
              "Application": "ecommerce-app",
              "CostCenter": "CC-1001",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "projectx-dev-private-rt",
              "Owner": "devops-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0673d7835e0ac337e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "287002303782",
            "id": "rtb-0aab64bade5fdc688",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:287002303782:route-table/rtb-0c6c8f7583e84dec4",
            "id": "rtb-0c6c8f7583e84dec4",
            "owner_id": "287002303782",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Application": "ecommerce-app",
              "CostCenter": "CC-1001",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "projectx-dev-public-rt",
              "Owner": "devops-team"
            },
            "tags_all": {
              "Application": "ecommerce-app",
              "CostCenter": "CC-1001",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "projectx-dev-public-rt",
              "Owner": "devops-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0673d7835e0ac337e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "287002303782",
            "id": "rtb-0c6c8f7583e84dec4",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}